fix:解决lombok无法编译的问题